--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</header>
 		<section>
 			<ul>
-				<li><a href="/en">English</a></li>
+				<li><a href="/en/" lang="en">English</a></li>
 			</ul>
 		</section>
 		<footer>
