--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<header>
 			<h1><a href="https://www.bisang1203.net/" target="_blank" title="새 창"><img
 						src="https://oopy.lazyrockets.com/api/v2/notion/image?src=https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Fe81c508a-51fb-4510-a874-9be6a8d0f7f2%2F0ee2eda2-952b-4d01-a0ac-9c4ff15a117e%2Fbisang_logo_16-9.png&blockId=175931e6-8100-806f-b05d-cda1f5f6ca24"
-						alt="윤석열즉각퇴진·사회대개혁 비상행동"></a> 관광객에게 드리는 말씀</h1>
+						alt="윤석열즉각퇴진·사회대개혁 비상행동"></a> 관광객들께 드리는 말씀</h1>
 		</header>
 		<section>
 			<ul>
